spade-tests/src/snapshots/spade_tests__typeinference__structs_are_not_addable.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}
fn test(x: A, y: A) -> A {
    x + y
}


error: Expected type Number<_>, got A
  ┌─ testinput:3:5
  │
2 │ fn test(x: A, y: A) -> A {
  │            - Type A inferred here
3 │     x + y
  │     ^----
  │     │
  │     Type Number<_> inferred here
  │     Expected Number<_>
  │
  = note: Expected: Number<_>
               Got: A
